# touwers

./: .gitignore  AUDIO_ARCHITECTURE.md  AUDIO_DOCUMENTATION_INDEX.md  AUDIO_IMPLEMENTATION_CHECKLIST.md  AUDIO_QUICK_START.md  AUDIO_README.md  AUDIO_SYSTEM_SETUP.md  Create-Shortcut.ps1  DOCUMENTATION_INDEX.md  FINAL_CHECKLIST.md  FROG_OPTIMIZATION.md  GETTING_STARTED_VISUAL.md  GRID_SCALING_FIX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Launch-Touwers.ps1  METHOD_MIGRATION_REFERENCE.md  MIGRATION_COMPLETE.txt  MIGRATION_SUMMARY.md  OPTIMIZATION_CHECKLIST.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIXES.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_TAURI.md  REFACTORING_CHECKLIST.md  REFACTORING_SUMMARY.md  RESOLUTION_FIX_SUMMARY.md  RESOLUTION_QUICK_REFERENCE.md  RESOLUTION_SYSTEM.md  START_HERE.md  TAURI_CLEANUP.md  TAURI_MIGRATION_COMPLETE.md  TAURI_SETUP.md  TEST_SAVE_LOAD.md  TOWERFORGE_IMPLEMENTATION.md  TOWERFORGE_REFACTOR.md  Touwers.bat  (+15 more)
.cargo/: config.toml
.github/: copilot-instructions.md
apps/desktop/: CODE_SIGNING.md  NEXT_STEPS.md  STEAM_ACHIEVEMENTS.md  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer/: LICENSE.rtf  LICENSE.txt  hooks.nsh  installer.nsi
apps/desktop/src-tauri/src/: lib.rs  main.rs
public/: index.html  level-designer.css  level-designer.html  manifest.json  player-level-designer.html  style.css  sw.js
src/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+298 files in other folders)
