[package]
name = "touwers-desktop"
version = "1.0.1"
description = "Tower Defense Game"
authors = ["Lily's Little Adventures"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "touwers_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
